# cm-rgb-cpp

./: .gitignore  LICENSE  README.md
cm-rgb-cpp/: CMakeLists.txt  build.bat
cm-rgb-cpp/src/: controller.cpp  controller.h  gui.cpp  gui.h  main.cpp  monitor.cpp  monitor.h
python/scripts/: cm-rgb-cli  cm-rgb-gui
